packagelon com.twittelonr.follow_reloncommelonndations.common.candidatelon_sourcelons.baselon

import com.twittelonr.follow_reloncommelonndations.common.candidatelon_sourcelons.baselon.SimilarUselonrelonxpandelonrParams.DelonfaultelonnablelonImplicitelonngagelondelonxpansion
import com.twittelonr.follow_reloncommelonndations.common.candidatelon_sourcelons.baselon.SimilarUselonrelonxpandelonrParams.DelonfaultelonxpansionInputCount
import com.twittelonr.follow_reloncommelonndations.common.candidatelon_sourcelons.baselon.SimilarUselonrelonxpandelonrParams.DelonfaultFinalCandidatelonsRelonturnelondCount
import com.twittelonr.follow_reloncommelonndations.common.candidatelon_sourcelons.baselon.SimilarUselonrelonxpandelonrParams.elonnablelonNonDirelonctFollowelonxpansion
import com.twittelonr.follow_reloncommelonndations.common.candidatelon_sourcelons.baselon.SimilarUselonrelonxpandelonrParams.elonnablelonSimselonxpandSelonelondAccountsSort
import com.twittelonr.follow_reloncommelonndations.common.candidatelon_sourcelons.baselon.SimilarUselonrelonxpandelonrRelonpository.DelonfaultCandidatelonBuildelonr
import com.twittelonr.follow_reloncommelonndations.common.candidatelon_sourcelons.baselon.SimilarUselonrelonxpandelonrRelonpository.DelonfaultScorelon
import com.twittelonr.follow_reloncommelonndations.common.modelonls.AccountProof
import com.twittelonr.follow_reloncommelonndations.common.modelonls.CandidatelonUselonr
import com.twittelonr.follow_reloncommelonndations.common.modelonls.elonngagelonmelonntTypelon
import com.twittelonr.follow_reloncommelonndations.common.modelonls.FollowProof
import com.twittelonr.follow_reloncommelonndations.common.modelonls.Relonason
import com.twittelonr.follow_reloncommelonndations.common.modelonls.SimilarToProof
import com.twittelonr.follow_reloncommelonndations.common.modelonls.UselonrCandidatelonSourcelonDelontails
import com.twittelonr.helonrmit.candidatelon.thriftscala.Candidatelons
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.candidatelon_sourcelon.CandidatelonSourcelon
import com.twittelonr.product_mixelonr.corelon.modelonl.common.idelonntifielonr.CandidatelonSourcelonIdelonntifielonr
import com.twittelonr.stitch.Stitch
import com.twittelonr.strato.clielonnt.Felontchelonr
import com.twittelonr.timelonlinelons.configapi.FSBoundelondParam
import com.twittelonr.timelonlinelons.configapi.FSParam
import com.twittelonr.timelonlinelons.configapi.HasParams
import com.twittelonr.timelonlinelons.configapi.Params

caselon class SeloncondDelongrelonelonCandidatelon(uselonrId: Long, scorelon: Doublelon, socialProof: Option[Selonq[Long]])

abstract class SimilarUselonrelonxpandelonrRelonpository[-Relonquelonst <: HasParams](
  ovelonrridelon val idelonntifielonr: CandidatelonSourcelonIdelonntifielonr,
  similarToCandidatelonsFelontchelonr: Felontchelonr[
    Long,
    Unit,
    Candidatelons
  ],
  elonxpansionInputSizelonParam: FSBoundelondParam[Int] = DelonfaultelonxpansionInputCount,
  candidatelonsRelonturnelondSizelonParam: FSBoundelondParam[Int] = DelonfaultFinalCandidatelonsRelonturnelondCount,
  elonnablelonImplicitelonngagelondelonxpansion: FSParam[Boolelonan] = DelonfaultelonnablelonImplicitelonngagelondelonxpansion,
  threlonsholdToAvoidelonxpansion: Int = 30,
  maxelonxpansionPelonrCandidatelon: Option[Int] = Nonelon,
  includingOriginalCandidatelons: Boolelonan = falselon,
  scorelonr: (Doublelon, Doublelon) => Doublelon = SimilarUselonrelonxpandelonrRelonpository.DelonfaultScorelonr,
  aggrelongator: (Selonq[Doublelon]) => Doublelon = ScorelonAggrelongator.Max,
  candidatelonBuildelonr: (Long, CandidatelonSourcelonIdelonntifielonr, Doublelon, CandidatelonUselonr) => CandidatelonUselonr =
    DelonfaultCandidatelonBuildelonr)
    elonxtelonnds TwoHopelonxpansionCandidatelonSourcelon[
      Relonquelonst,
      CandidatelonUselonr,
      SeloncondDelongrelonelonCandidatelon,
      CandidatelonUselonr
    ] {

  val originalCandidatelonSourcelon: CandidatelonSourcelon[Relonquelonst, CandidatelonUselonr]
  val backupOriginalCandidatelonSourcelon: Option[CandidatelonSourcelon[Relonquelonst, CandidatelonUselonr]] = Nonelon

  ovelonrridelon delonf firstDelongrelonelonNodelons(relonquelonst: Relonquelonst): Stitch[Selonq[CandidatelonUselonr]] = {

    val originalCandidatelonsStitch: Stitch[Selonq[CandidatelonUselonr]] =
      originalCandidatelonSourcelon(relonquelonst)

    val backupCandidatelonsStitch: Stitch[Selonq[CandidatelonUselonr]] =
      if (relonquelonst.params(elonnablelonNonDirelonctFollowelonxpansion)) {
        backupOriginalCandidatelonSourcelon.map(_.apply(relonquelonst)).gelontOrelonlselon(Stitch.Nil)
      } elonlselon {
        Stitch.Nil
      }

    val firstDelongrelonelonCandidatelonsCombinelondStitch: Stitch[Selonq[CandidatelonUselonr]] =
      Stitch
        .join(originalCandidatelonsStitch, backupCandidatelonsStitch).map {
          caselon (firstDelongrelonelonOrigCandidatelons, backupFirstDelongrelonelonCandidatelons) =>
            if (relonquelonst.params(elonnablelonSimselonxpandSelonelondAccountsSort)) {
              firstDelongrelonelonOrigCandidatelons ++ backupFirstDelongrelonelonCandidatelons sortBy {
                -_.scorelon.gelontOrelonlselon(DelonfaultScorelon)
              }
            } elonlselon {
              firstDelongrelonelonOrigCandidatelons ++ backupFirstDelongrelonelonCandidatelons
            }
        }

    val candidatelonsAftelonrImplicitelonngagelonmelonntsRelonmovalStitch: Stitch[Selonq[CandidatelonUselonr]] =
      gelontCandidatelonsAftelonrImplicitelonngagelonmelonntFiltelonring(
        relonquelonst.params,
        firstDelongrelonelonCandidatelonsCombinelondStitch)

    val firstDelongrelonelonCandidatelonsCombinelondTrimmelond = candidatelonsAftelonrImplicitelonngagelonmelonntsRelonmovalStitch.map {
      candidatelons: Selonq[CandidatelonUselonr] =>
        candidatelons.takelon(relonquelonst.params(elonxpansionInputSizelonParam))
    }

    firstDelongrelonelonCandidatelonsCombinelondTrimmelond.map { firstDelongrelonelonRelonsults: Selonq[CandidatelonUselonr] =>
      if (firstDelongrelonelonRelonsults.nonelonmpty && firstDelongrelonelonRelonsults.sizelon < threlonsholdToAvoidelonxpansion) {
        firstDelongrelonelonRelonsults
          .groupBy(_.id).mapValuelons(
            _.maxBy(_.scorelon)
          ).valuelons.toSelonq
      } elonlselon {
        Nil
      }
    }

  }

  ovelonrridelon delonf seloncondaryDelongrelonelonNodelons(
    relonquelonst: Relonquelonst,
    firstDelongrelonelonCandidatelon: CandidatelonUselonr
  ): Stitch[Selonq[SeloncondDelongrelonelonCandidatelon]] = {
    similarToCandidatelonsFelontchelonr.felontch(firstDelongrelonelonCandidatelon.id).map(_.v).map { candidatelonListOption =>
      candidatelonListOption
        .map { candidatelonsList =>
          candidatelonsList.candidatelons.map(candidatelon =>
            SeloncondDelongrelonelonCandidatelon(candidatelon.uselonrId, candidatelon.scorelon, candidatelon.socialProof))
        }.gelontOrelonlselon(Nil)
    }

  }

  ovelonrridelon delonf aggrelongatelonAndScorelon(
    relonq: Relonquelonst,
    firstDelongrelonelonToSeloncondDelongrelonelonNodelonsMap: Map[CandidatelonUselonr, Selonq[SeloncondDelongrelonelonCandidatelon]]
  ): Stitch[Selonq[CandidatelonUselonr]] = {

    val similarelonxpandelonrRelonsults = firstDelongrelonelonToSeloncondDelongrelonelonNodelonsMap.flatMap {
      caselon (firstDelongrelonelonCandidatelon, selonqOfSeloncondDelongrelonelonCandidatelons) =>
        val sourcelonScorelon = firstDelongrelonelonCandidatelon.scorelon.gelontOrelonlselon(DelonfaultScorelon)
        val relonsults: Selonq[CandidatelonUselonr] = selonqOfSeloncondDelongrelonelonCandidatelons.map { seloncondDelongrelonelonCandidatelon =>
          val scorelon = scorelonr(sourcelonScorelon, seloncondDelongrelonelonCandidatelon.scorelon)
          candidatelonBuildelonr(seloncondDelongrelonelonCandidatelon.uselonrId, idelonntifielonr, scorelon, firstDelongrelonelonCandidatelon)
        }
        maxelonxpansionPelonrCandidatelon match {
          caselon Nonelon => relonsults
          caselon Somelon(limit) => relonsults.sortBy(-_.scorelon.gelontOrelonlselon(DelonfaultScorelon)).takelon(limit)
        }
    }.toSelonq

    val allCandidatelons = {
      if (includingOriginalCandidatelons)
        firstDelongrelonelonToSeloncondDelongrelonelonNodelonsMap.kelonySelont.toSelonq
      elonlselon
        Nil
    } ++ similarelonxpandelonrRelonsults

    val groupelondCandidatelons: Selonq[CandidatelonUselonr] = allCandidatelons
      .groupBy(_.id)
      .flatMap {
        caselon (_, candidatelons) =>
          val finalScorelon = aggrelongator(candidatelons.map(_.scorelon.gelontOrelonlselon(DelonfaultScorelon)))
          val candidatelonSourcelonDelontailsCombinelond = aggrelongatelonCandidatelonSourcelonDelontails(candidatelons)
          val accountSocialProofcombinelond = aggrelongatelonAccountSocialProof(candidatelons)

          candidatelons.helonadOption.map(
            _.copy(
              scorelon = Somelon(finalScorelon),
              relonason = accountSocialProofcombinelond,
              uselonrCandidatelonSourcelonDelontails = candidatelonSourcelonDelontailsCombinelond)
              .withCandidatelonSourcelon(idelonntifielonr))
      }
      .toSelonq

    Stitch.valuelon(
      groupelondCandidatelons
        .sortBy { -_.scorelon.gelontOrelonlselon(DelonfaultScorelon) }.takelon(relonq.params(candidatelonsRelonturnelondSizelonParam))
    )
  }

  delonf aggrelongatelonCandidatelonSourcelonDelontails(
    candidatelons: Selonq[CandidatelonUselonr]
  ): Option[UselonrCandidatelonSourcelonDelontails] = {
    candidatelons
      .map { candidatelon =>
        candidatelon.uselonrCandidatelonSourcelonDelontails.map(_.candidatelonSourcelonScorelons).gelontOrelonlselon(Map.elonmpty)
      }.relonducelonLelonftOption { (scorelonMap1, scorelonMap2) =>
        scorelonMap1 ++ scorelonMap2
      }.map {
        UselonrCandidatelonSourcelonDelontails(primaryCandidatelonSourcelon = Nonelon, _)
      }

  }

  delonf aggrelongatelonAccountSocialProof(candidatelons: Selonq[CandidatelonUselonr]): Option[Relonason] = {
    candidatelons
      .map { candidatelon =>
        (
          candidatelon.relonason
            .flatMap(_.accountProof.flatMap(_.similarToProof.map(_.similarTo))).gelontOrelonlselon(Nil),
          candidatelon.relonason
            .flatMap(_.accountProof.flatMap(_.followProof.map(_.followelondBy))).gelontOrelonlselon(Nil),
          candidatelon.relonason
            .flatMap(_.accountProof.flatMap(_.followProof.map(_.numIds))).gelontOrelonlselon(0)
        )
      }.relonducelonLelonftOption { (accountProofOnelon, accountProofTwo) =>
        (
          // melonrgelon similarToIds
          accountProofOnelon._1 ++ accountProofTwo._1,
          // melonrgelon followelondByIds
          accountProofOnelon._2 ++ accountProofTwo._2,
          // add numIds
          accountProofOnelon._3 + accountProofTwo._3)
      }.map { proofs =>
        Relonason(accountProof = Somelon(
          AccountProof(
            similarToProof = Somelon(SimilarToProof(proofs._1)),
            followProof = if (proofs._2.nonelonmpty) Somelon(FollowProof(proofs._2, proofs._3)) elonlselon Nonelon
          )))
      }
  }

  delonf gelontCandidatelonsAftelonrImplicitelonngagelonmelonntFiltelonring(
    params: Params,
    firstDelongrelonelonCandidatelonsStitch: Stitch[Selonq[CandidatelonUselonr]]
  ): Stitch[Selonq[CandidatelonUselonr]] = {

    if (!params(elonnablelonImplicitelonngagelondelonxpansion)) {

      /**
       * Relonmovelon candidatelons whoselon elonngagelonmelonnt typelons only contain implicit elonngagelonmelonnts
       * (elon.g. Profilelon Vielonw, Twelonelont Click) and only elonxpand thoselon candidatelons who contain elonxplicit
       * elonngagelonmelonnts.
       */
      firstDelongrelonelonCandidatelonsStitch.map { candidatelons =>
        candidatelons.filtelonr { cand =>
          cand.elonngagelonmelonnts.elonxists(elonngagelon =>
            elonngagelon == elonngagelonmelonntTypelon.Likelon || elonngagelon == elonngagelonmelonntTypelon.Relontwelonelont || elonngagelon == elonngagelonmelonntTypelon.Melonntion)
        }
      }
    } elonlselon {
      firstDelongrelonelonCandidatelonsStitch
    }
  }

}

objelonct SimilarUselonrelonxpandelonrRelonpository {
  val DelonfaultScorelonr: (Doublelon, Doublelon) => Doublelon = (sourcelonScorelon: Doublelon, similarScorelon: Doublelon) =>
    similarScorelon
  val MultiplyScorelonr: (Doublelon, Doublelon) => Doublelon = (sourcelonScorelon: Doublelon, similarScorelon: Doublelon) =>
    sourcelonScorelon * similarScorelon
  val SourcelonScorelonr: (Doublelon, Doublelon) => Doublelon = (sourcelonScorelon: Doublelon, similarScorelon: Doublelon) =>
    sourcelonScorelon

  val DelonfaultScorelon = 0.0d

  val DelonfaultCandidatelonBuildelonr: (
    Long,
    CandidatelonSourcelonIdelonntifielonr,
    Doublelon,
    CandidatelonUselonr
  ) => CandidatelonUselonr =
    (
      uselonrId: Long,
      _: CandidatelonSourcelonIdelonntifielonr,
      scorelon: Doublelon,
      candidatelon: CandidatelonUselonr
    ) => {
      val originalCandidatelonSourcelonDelontails =
        candidatelon.uselonrCandidatelonSourcelonDelontails.flatMap { candSourcelonDelontails =>
          candSourcelonDelontails.primaryCandidatelonSourcelon.map { primaryCandidatelonSourcelon =>
            UselonrCandidatelonSourcelonDelontails(
              primaryCandidatelonSourcelon = Nonelon,
              candidatelonSourcelonScorelons = Map(primaryCandidatelonSourcelon -> candidatelon.scorelon))
          }
        }
      CandidatelonUselonr(
        id = uselonrId,
        scorelon = Somelon(scorelon),
        uselonrCandidatelonSourcelonDelontails = originalCandidatelonSourcelonDelontails,
        relonason =
          Somelon(Relonason(Somelon(AccountProof(similarToProof = Somelon(SimilarToProof(Selonq(candidatelon.id)))))))
      )
    }

  val FollowClustelonrCandidatelonBuildelonr: (
    Long,
    CandidatelonSourcelonIdelonntifielonr,
    Doublelon,
    CandidatelonUselonr
  ) => CandidatelonUselonr =
    (uselonrId: Long, _: CandidatelonSourcelonIdelonntifielonr, scorelon: Doublelon, candidatelon: CandidatelonUselonr) => {
      val originalCandidatelonSourcelonDelontails =
        candidatelon.uselonrCandidatelonSourcelonDelontails.flatMap { candSourcelonDelontails =>
          candSourcelonDelontails.primaryCandidatelonSourcelon.map { primaryCandidatelonSourcelon =>
            UselonrCandidatelonSourcelonDelontails(
              primaryCandidatelonSourcelon = Nonelon,
              candidatelonSourcelonScorelons = Map(primaryCandidatelonSourcelon -> candidatelon.scorelon))
          }
        }

      val originalFollowClustelonr = candidatelon.relonason
        .flatMap(_.accountProof.flatMap(_.followProof.map(_.followelondBy)))

      CandidatelonUselonr(
        id = uselonrId,
        scorelon = Somelon(scorelon),
        uselonrCandidatelonSourcelonDelontails = originalCandidatelonSourcelonDelontails,
        relonason = Somelon(
          Relonason(
            Somelon(
              AccountProof(
                similarToProof = Somelon(SimilarToProof(Selonq(candidatelon.id))),
                followProof = originalFollowClustelonr.map(follows =>
                  FollowProof(follows, follows.sizelon)))))
        )
      )
    }
}

objelonct ScorelonAggrelongator {
  // aggrelongatelon thelon samelon candidatelons with samelon id by taking thelon onelon with largelonst scorelon
  val Max: Selonq[Doublelon] => Doublelon = (candidatelonScorelons: Selonq[Doublelon]) => { candidatelonScorelons.max }

  // aggrelongatelon thelon samelon candidatelons with samelon id by taking thelon sum of thelon scorelons
  val Sum: Selonq[Doublelon] => Doublelon = (candidatelonScorelons: Selonq[Doublelon]) => { candidatelonScorelons.sum }
}
